<resources>
    <string name="app_name">B1-Nepal </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_recipe">Search for recipe</string>
    <string name="recipe">Recipe #</string>
    <string name="dal_bhat">Dal Bhat</string>
    <string name="jan_13th_2018">Jan 13th, 2018</string>
    <string name="delicious_homemade_dal_bhat_with_curry_and_rice_perfect_for_everyday_meal">Delicious homemade dal bhat with curry and rice. Perfect for everyday meal.</string>
    <string name="_45_min">45 min</string>
    <string name="todo">TODO</string>
    <string name="view_recipe">View Recipe</string>
    <string-array name="spinner">
        <item>…</item>
        <item>Boy</item>
        <item>Girl</item>
        <item>Other</item>
    </string-array>
</resources>
