<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe_selectable">

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="wrap_content"
        android:layout_height="203dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/dal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/search_for_recipe"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/searching_glass"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/recipe_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="286dp"
        android:text="@string/recipe"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image" />

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="245dp"
        android:text="@string/dal_bhat"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_num" />

    <TextView
        android:id="@+id/recipe_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="283dp"
        android:text="@string/jan_13th_2018"
        android:textColor="#888888"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

    <TextView
        android:id="@+id/recipe_description"
        android:layout_width="219dp"
        android:layout_height="73dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="127dp"
        android:text="@string/delicious_homemade_dal_bhat_with_curry_and_rice_perfect_for_everyday_meal"
        android:textColor="#888888"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_date" />

    <ImageView
        android:id="@+id/time_img"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="11dp"
        android:src="@android:drawable/presence_away"
        app:layout_constraintEnd_toStartOf="@+id/recipe_cook_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_description"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/recipe_cook_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="239dp"
        android:text="@string/_45_min"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_img"
        app:layout_constraintTop_toBottomOf="@+id/recipe_description" />

    <Button
        android:id="@+id/recipe_goto"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="277dp"
        android:layout_height="53dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:background="#2196F3"
        android:text="@string/view_recipe"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_img" />

</androidx.constraintlayout.widget.ConstraintLayout>